--- a/QUAC_SYS/client/src/pages/Home/index.css
+++ b/QUAC_SYS/client/src/pages/Home/index.css
@@ -3,6 +3,10 @@ body {
     background-color :#253C59;
 }
 
+.containerhome{
+  padding-top: 7%;
+}
+
 .button {
   font-family: "Lucida Console", "Courier New", monospace;
   background-color: #2D4B73; 
@@ -19,11 +23,31 @@ body {
   color: #F2AB27; 
   border: 2px solid #F2AB27 ;
 }
+.login {
+  font-family: "Lucida Console", "Courier New", monospace;
+  background-color: #2D4B73; 
+  border-radius: 5px;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  color: #F2AB27; 
+  border: 2px solid #F2AB27 ;
+}
 
-
-
-  h1{
+.hometitle{
     font-family: "Lucida Console", "Courier New", monospace;
     text-align:center;
     color: white;
   }
+
+  label {
+    font-size: 30px;
+    font-family: "Lucida Console", "Courier New", monospace;
+    color: white;
+} 
