--- a/QUAC_SYS/client/src/components/usuarios/index.css
+++ b/QUAC_SYS/client/src/components/usuarios/index.css
@@ -3,12 +3,28 @@ body{
     text-align: center;
     background-color :#253C59;   
 }
+.usercontainer{
+    padding-top: 7%;
+}
+
 h1{
     font-size: 50px;
     font-family: "Lucida Console", "Courier New", monospace;
     color: white;
 }
 
+label {
+    font-size: 30px;
+    font-family: "Lucida Console", "Courier New", monospace;
+    color: white;
+} 
+
+.imputestabelecimento{
+    border: 10px;
+    padding: 10px 10px 10px 10px;
+    margin: 10px 20px 10px 10px;
+    border-radius: 5px;
+}  
 .button {
     font-family: "Lucida Console", "Courier New", monospace;
     background-color: #2D4B73; 
