--- a/QUAC_SYS/client/src/pages/Home/index.css
+++ b/QUAC_SYS/client/src/pages/Home/index.css
@@ -46,19 +46,8 @@ body {
     color: white;
   }
 
-  .labelemail {
+  label {
     font-size: 30px;
     font-family: "Lucida Console", "Courier New", monospace;
     color: white;
 } 
-.labelsenha {
-    font-size: 30px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color: white;
-} 
-
-.logintitle{
-    font-size: 50px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color: white;
-}
