--- a/QUAC_SYS/client/src/pages/VerificarDistanciaTeste/index.css
+++ b/QUAC_SYS/client/src/pages/VerificarDistanciaTeste/index.css
@@ -1,12 +1,8 @@
 body{
     font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
-    background-color :#253C59;   
-}
-h1{
-    font-size: 50px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color: white;
+    background-color :#253C59;  
+    padding-top: 18%;
 }
 
 .button {
