--- a/QUAC_SYS/client/src/pages/retirarSenha/index.css
+++ b/QUAC_SYS/client/src/pages/retirarSenha/index.css
@@ -1,12 +1,23 @@
 body{
     font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
-    background-color :#253C59;  
-    padding-top: 18%;
+    background-color :#253C59;   
 }
 
-h1{
-    font-family: "Lucida Console", "Courier New", monospace;
+h2{
     font-size: 50px;
+    font-family: "Lucida Console", "Courier New", monospace;
     color: white;
 }
+h3{
+    font-size: 50px;
+    font-family: "Lucida Console", "Courier New", monospace;
+    color: white;
+}
+
+p{
+    font-size: 50px;
+    font-family: "Lucida Console", "Courier New", monospace;
+    color: white;
+}
+
