--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -1,57 +1,3 @@
-/* body {
-    text-align: center;
-    background-color :#253C59;
-}
-
-.containerhome{
-  padding-top: 7%;
-}
-
-.button {
-  font-family: "Lucida Console", "Courier New", monospace;
-  background-color: #2D4B73; 
-  border-radius: 5px;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  color: #F2AB27; 
-  border: 2px solid #F2AB27 ;
-}
-.login {
-  font-family: "Lucida Console", "Courier New", monospace;
-  background-color: #2D4B73; 
-  border-radius: 5px;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  color: #F2AB27; 
-  border: 2px solid #F2AB27 ;
-}
-
-.hometitle{
-    font-family: "Lucida Console", "Courier New", monospace;
-    text-align:center;
-    color: white;
-  }
-
-  label {
-    font-size: 30px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color: white;
-}  */
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
 body{
@@ -124,8 +70,7 @@ h6 span{
   border-radius: 50%;
   color: #ffeba7;
   background-color: #102770;
-  font-family: 'unicons';
-  content: '\eb4f';
+  content: url('https://api.iconify.design/mdi/duck.svg?color=white');
   z-index: 20;
   top: -10px;
   left: -10px;
@@ -135,7 +80,7 @@ h6 span{
   transition: all 0.5s ease;
 }
 .checkbox:checked + label:before {
-  transform: translateX(44px) rotate(-270deg);
+  transform: translateX(44px) rotate(-360deg);
 }
 
 
