--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
+
 body{
 	font-family: 'Poppins', sans-serif;
 	font-weight: 300;
@@ -257,6 +258,19 @@ h6 span{
   color: #102770;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
 }
+.input-icon-login {
+  position: absolute;
+  top: 0;
+  left: 18px;
+  height: 48px;
+  font-size: 24px;
+  line-height: 48px;
+  text-align: left;
+  color: black;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
 .btn:active,
 .btn:focus{  
   background-color: #102770;
