--- a/QUAC_SYS/client/src/components/DashboardContaimer/index.css
+++ b/QUAC_SYS/client/src/components/DashboardContaimer/index.css
@@ -1,29 +1,44 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+
 body{
-    font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
-    background-color :#253C59;   
+    background-color :#1b1b1b;   
 }
 
 h1{
     font-size: 50px;
     font-family: "Lucida Console", "Courier New", monospace;
-    color: white;
+    color: #c4c3ca;
 }
 
-.button {
-    font-family: "Lucida Console", "Courier New", monospace;
-    background-color: #2D4B73; 
-    border-radius: 5px;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    color: #F2AB27; 
-    border: 2px solid #F2AB27 ;
+.btn-voltar {
+  border-radius: 4px;
+  height: 25px;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-transition : all 200ms linear;
+  transition: all 200ms linear;
+  padding: 0 30px;
+  letter-spacing: 1px;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  position: absolute;
+  right: 10px;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  text-align: center;
+  border: none;
+  background-color: #ffeba7;
+  color: #000000;
+  box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
   }
 
