--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -7,7 +7,7 @@ body{
 	font-size: 15px;
 	line-height: 1.7;
 	color: #c4c3ca;
-	background-color: #1f2029;
+	background-color: #1b1b1b;
 	overflow-x: hidden;
 }
 a {
@@ -30,6 +30,8 @@ p {
 }
 h4 {
   font-weight: 600;
+  margin-top: 40px;
+  padding: 0 0 0 0;
 }
 h6 span{
   padding: 0 20px;
@@ -70,8 +72,8 @@ h6 span{
   height: 36px;
   border-radius: 50%;
   color: #ffeba7;
-  background-color: #102770;
-  content: url('https://api.iconify.design/mdi/duck.svg?color=white');
+  background-color: black;
+  content: url('https://api.iconify.design/mdi/duck.svg?color=yellow');
   z-index: 20;
   top: -10px;
   left: -10px;
@@ -83,7 +85,6 @@ h6 span{
 .checkbox:checked + label:before {
   transform: translateX(44px) rotate(-360deg);
 }
-
 
 .card-3d-wrap {
   position: relative;
@@ -109,10 +110,10 @@ h6 span{
   width: 100%;
   height: 100%;
   background-color: #2a2b38;
-  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
+  background-image: url('https://us-prod.asyncgw.teams.microsoft.com/v1/objects/0-eus-d13-5b6a014338344b7adcdd45338240b9ad/views/imgpsh_mobile_save');
   background-position: bottom center;
   background-repeat: no-repeat;
-  background-size: 300%;
+  background-size: 150%;
   position: absolute;
   border-radius: 6px;
   left: 0;
@@ -140,7 +141,6 @@ h6 span{
   z-index: 20;
   display: block;
 }
-
 
 .form-group{ 
   position: relative;
@@ -230,7 +230,7 @@ h6 span{
     transition: all 200ms linear;
 }
 
-.btn{  
+.btn{
   border-radius: 4px;
   height: 44px;
   font-size: 13px;
@@ -255,7 +255,7 @@ h6 span{
   text-align: center;
   border: none;
   background-color: #ffeba7;
-  color: #102770;
+  color: #000000;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
 }
 .input-icon-login {
@@ -266,36 +266,36 @@ h6 span{
   font-size: 24px;
   line-height: 48px;
   text-align: left;
-  color: black;
+  color: #ffeba7;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 
 .btn:active,
 .btn:focus{  
-  background-color: #102770;
+  background-color: rgba(16,39,112,.2);
   color: #ffeba7;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 .btn:hover{  
-  background-color: #102770;
+  background-color: rgba(16,39,112,.2);
   color: #ffeba7;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 
-
-
-
-.logo {
-	position: absolute;
-	top: 30px;
-	right: 30px;
-	display: block;
-	z-index: 100;
-	transition: all 250ms linear;
+.logo-titulo {
+  font-size: 25px;
+  color: #ffd139;
+  border: solid 2px #ffdc69;
+  display: inline-block;
+  padding: 0px 5px 0px 5px;
+  margin-top: 20px;
 }
-.logo img {
-	height: 26px;
-	width: auto;
-	display: block;
+
+.form-signup{
+  margin-top: -16px;
+}
+
+.fyp{
+  margin-top: 10px;
 }
