--- a/QUAC_SYS/client/src/pages/DevDashboard/index.css
+++ b/QUAC_SYS/client/src/pages/DevDashboard/index.css
@@ -138,4 +138,21 @@
     border: solid 1px #c4c3ca;
     
 }
+.salvarBtn{
+    border-radius: 4px;
+    height: 25px;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: all 200ms linear;
+    padding: 0 10px;
+    letter-spacing: 1px;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffeba7;
+    color: #000000;
+    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+    border: solid 1px #1f2029;  
+    margin-top: 30px;
+}
 
