--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -42,7 +42,7 @@ h6 span{
   position: relative;
   width: 100%;
   display: block;
-}
+} 
 .full-height{
   min-height: 100vh;
 }
@@ -62,7 +62,7 @@ h6 span{
   padding: 0;
   margin: 10px auto;
   cursor: pointer;
-  background-color: #ffeba7;
+  background-color: #ffffff;
 }
 .checkbox:checked + label:before,
 .checkbox:not(:checked) + label:before{
@@ -180,7 +180,7 @@ h6 span{
   font-size: 24px;
   line-height: 48px;
   text-align: left;
-  color: #ffeba7;
+  color: #ffffff;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
@@ -254,7 +254,7 @@ h6 span{
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: #ffeba7;
+  background-color: #ffffff;
   color: #000000;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
 }
@@ -266,7 +266,7 @@ h6 span{
   font-size: 24px;
   line-height: 48px;
   text-align: left;
-  color: #ffeba7;
+  color: #ffffff;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
