--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -284,7 +284,7 @@ h6 span{
 }
 
 .logo-titulo {
-  font-size: 25px;
+  font-size: 40px;
   color: #ffd139;
   border: solid 2px #ffdc69;
   display: inline-block;
@@ -298,4 +298,33 @@ h6 span{
 
 .fyp{
   margin-top: 10px;
+}
+
+ /* Small - Tablets */
+ @media screen and (min-width: 600px) {
+  .logo-titulo {
+    font-size: 50px;
+    color: #ffd139;
+    border: solid 2px #ffdc69;
+    display: inline-block;
+    padding: 0px 5px 0px 5px;
+    margin-top: 10px;
+    margin-bottom: 35px;
+  }
+}
+
+/* Medium - Landscape tablets */
+@media screen and (min-width: 768px) {
+  
+}
+
+/* Large - notebooks/desktops */
+@media screen and (min-width: 1024px) {
+  
+  
+}        
+
+/* Extra large - notebooks/desktops */
+@media screen and (min-width: 1200px) {
+      
 }
