--- a/QUAC_SYS/client/src/components/DashboardContaimer/index.css
+++ b/QUAC_SYS/client/src/components/DashboardContaimer/index.css
@@ -37,7 +37,7 @@ h1{
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: #ffeba7;
+  background-color: #ffffff;
   color: #000000;
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
   }
