--- a/QUAC_SYS/client/src/pages/DevDashboard/index.css
+++ b/QUAC_SYS/client/src/pages/DevDashboard/index.css
@@ -10,17 +10,20 @@
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgba(128, 128, 128, 0.562); /* Black w/ opacity */
-   
 }
+
 .modalContent{
     background-image: url('https://senacsc754-my.sharepoint.com/personal/diego_santos3_alunos_sc_senac_br/Documents/Arquivos%20de%20Chat%20do%20Microsoft%20Teams/4364316faefc2a7731c6e788eb2bcecf%20-%20Copia.jpg');
-    margin-top: 130px;
-    margin-left: 15%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
     border: 1px solid #888;
-    width: 70%;
+    width: 265px;
     background-position: bottom center;
     background-repeat: no-repeat;
+    border-radius: 10px;
 }
 
 .name {
@@ -39,7 +42,6 @@
     transition: all 200ms linear;
     box-shadow: 0 4px 8px 0 rgb(21 21 21 / 20%);
     border: solid 1px #c4c3ca;
-    
 }
 
 .endereco{
@@ -77,7 +79,6 @@
     transition: all 200ms linear;
     box-shadow: 0 4px 8px 0 rgb(21 21 21 / 20%);
     border: solid 1px #c4c3ca;
-   
 }
 
 
@@ -97,7 +98,6 @@
     transition: all 200ms linear;
     box-shadow: 0 4px 8px 0 rgb(21 21 21 / 20%);
     border: solid 1px #c4c3ca;
-    
 }
 
 
@@ -117,7 +117,6 @@
     transition: all 200ms linear;
     box-shadow: 0 4px 8px 0 rgb(21 21 21 / 20%);
     border: solid 1px #c4c3ca;
-    
 }
 
 .latitude {
@@ -149,10 +148,62 @@
     letter-spacing: 1px;
     align-items: center;
     justify-content: center;
-    background-color: #ffeba7;
+    background-color: #ffffff;
     color: #000000;
     box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
-    border: solid 1px #1f2029;  
     margin-top: 30px;
+    border: none;
 }
+
+.btnsalvar{
+    border-radius: 4px;
+    height: 25px;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: all 200ms linear;
+    padding: 0 10px;
+    letter-spacing: 1px;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    color: #000000;
+    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+    margin-top: 30px;
+    border: none;
+}
+
+
+
+/* Small - Tablets */
+@media screen and (min-width: 600px) {
+    .modalContent{
+        background-image: url('https://senacsc754-my.sharepoint.com/personal/diego_santos3_alunos_sc_senac_br/Documents/Arquivos%20de%20Chat%20do%20Microsoft%20Teams/4364316faefc2a7731c6e788eb2bcecf%20-%20Copia.jpg');
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+        border: 1px solid #888;
+        width: 370px;
+        background-position: bottom center;
+        background-repeat: no-repeat;
+        border-radius: 10px;
+    }
+}
+
+/* Medium - Landscape tablets */
+@media screen and (min-width: 768px) {
+
+  }
+  
+  /* Large - notebooks/desktops */
+  @media screen and (min-width: 1024px) {
+    
+  }        
+  
+  /* Extra large - notebooks/desktops */
+  @media screen and (min-width: 1200px) {
+   
+  }  
 
