--- a/QUAC_SYS/client/src/pages/DevDashboard/index.css
+++ b/QUAC_SYS/client/src/pages/DevDashboard/index.css
@@ -44,6 +44,24 @@
     box-shadow: 0 4px 8px 0 rgb(21 21 21 / 20%);
     border: solid 1px #c4c3ca;
 }
+.email{
+    padding-left: 20px;
+    height: 25px;
+    width: 80%;
+    font-weight: 500;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.5px;
+    outline: none;
+    color: #c4c3ca;
+    background-color: #1f2029;
+    border: none;
+    transition: all 200ms linear;
+    box-shadow: 0 4px 8px 0 rgb(21 21 21 / 20%);
+    border: solid 1px #c4c3ca;
+      
+}
 
 .endereco{
     padding-left: 20px;
