--- a/QUAC_SYS/client/src/pages/VerificarDistancia/styles.css
+++ b/QUAC_SYS/client/src/pages/VerificarDistancia/styles.css
@@ -9,7 +9,7 @@ body{
     font-size: 13px;
     font-weight: 600;
     text-transform: uppercase;
-    padding: 0 30px;
+    padding: 0 15px;
     display: inline-flex;
     position: relative;
     left: 120px;
@@ -20,10 +20,9 @@ body{
     color: #000000;
     box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
     align-items: center;
-  }
+}
   
   .btnSenha{
-
     border-radius: 4px;
     height: 25px;
     font-size: 13px;
@@ -34,8 +33,58 @@ body{
     justify-content: flex-end;
     text-align: center;
     border: none;
-    background-color: #ffeba7;
+    background-color: #ffffff;
     color: #000000;
     box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);  
     align-items: center;
+}
+
+  /* Small - Tablets */
+@media screen and (min-width: 600px) {
+  .btnhome {
+    margin-top: 10px;
+    border-radius: 4px;
+    height: 25px;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 0 15px;
+    display: inline-flex;
+    position: relative;
+    left: 230px;
+    justify-content: flex-end;
+    text-align: center;
+    border: none;
+    background-color: #ffffff;
+    color: #000000;
+    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+    align-items: center;
+    margin-bottom: 30px;
+}
+}
+
+/* Medium - Landscape tablets */
+@media screen and (min-width: 768px) {
+  .btnhome{
+    left: 320px;
   }
+}
+
+ /* Large - notebooks/desktops */
+ @media screen and (min-width: 1024px) {
+  .btnhome{
+    left: 450px;
+  }
+}     
+
+ /* Extra large - notebooks/desktops */
+ @media screen and (min-width: 1200px) {
+  .btnhome{
+    left: 530px;
+  }
+}  
+@media screen and (min-width: 1920px) {
+  .btnhome{
+    left: 890px;
+  }
+} 
