--- a/QUAC_SYS/client/src/components/Mapa/styles.css
+++ b/QUAC_SYS/client/src/components/Mapa/styles.css
@@ -11,7 +11,23 @@
     width: 330px;
     margin-bottom: 25px;
 }
-
+.distance-icon{
+    color:  #ffdc69;
+}
+.distance-info{
+    margin-top: 20px;
+    background-color: #2b2b2b;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.btnSenha{
+    margin-top: 30px;
+}
+.p_distancia{
+    margin-top: 10px; 
+}
 
   /* Small - Tablets */
   @media screen and (min-width: 600px) {
@@ -20,14 +36,16 @@
         height: 350px;
         width: 510px;
         margin-bottom: 25px;
-    
+    }
+    .distance-info{
+        width: 600px
     }
     .p_distancia{
-        font-size: 30px;
+        font-size: 25px;
+        margin-top: 10px;
     }
     .p_tempo{
-        font-size: 30px;
-
+        font-size: 25px;
     }
     .btnSenha{
         margin-top: 70px;
