--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -89,7 +89,7 @@ h6 span{
 
 .card-3d-wrap {
   position: relative;
-  width: 440px;
+  width: 100%;
   max-width: 100%;
   height: 400px;
   -webkit-transform-style: preserve-3d;
@@ -117,8 +117,6 @@ h6 span{
   background-size: 150%;
   position: absolute;
   border-radius: 6px;
-  left: 0;
-  top: 0;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-backface-visibility: hidden;
