--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -111,7 +111,7 @@ h6 span{
   width: 100%;
   height: 100%;
   background-color: #2a2b38;
-  background-image: url('https://us-prod.asyncgw.teams.microsoft.com/v1/objects/0-eus-d13-5b6a014338344b7adcdd45338240b9ad/views/imgpsh_mobile_save');
+  background-image: url('https://dc687.4shared.com/img/GN0CpOzsea/s24/17c71c311f0/MicrosoftTeams-image?async&rand=0.9885102850891978');
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: 150%;
