--- a/QUAC_SYS/client/src/pages/ModeradorDashboard/index.css
+++ b/QUAC_SYS/client/src/pages/ModeradorDashboard/index.css
@@ -18,5 +18,5 @@
     background-size: 100%;
     position: absolute;
     background-repeat: no-repeat;
-    background-image: url('https://senacsc754-my.sharepoint.com/personal/diego_santos3_alunos_sc_senac_br/Documents/Arquivos%20de%20Chat%20do%20Microsoft%20Teams/imgpsh_mobile_save-removebg-preview.png');
+    background-image: url('https://dc687.4shared.com/img/GN0CpOzsea/s24/17c71c311f0/MicrosoftTeams-image?async&rand=0.9885102850891978');
 }
