--- a/QUAC_SYS/client/src/components/Mapa/styles.css
+++ b/QUAC_SYS/client/src/components/Mapa/styles.css
@@ -12,15 +12,16 @@
     margin-bottom: 25px;
 }
 .distance-icon{
-    color:  #ffdc69;
+    color:  #b3b3b3;
 }
 .distance-info{
     margin-top: 20px;
+    justify-content: center;
     background-color: #2b2b2b;
     align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    width: 100%;
 }
 .btnSenha{
     margin-top: 30px;
@@ -36,9 +37,6 @@
         height: 350px;
         width: 510px;
         margin-bottom: 25px;
-    }
-    .distance-info{
-        width: 600px
     }
     .p_distancia{
         font-size: 25px;
